# helloworld-tonic-bsr

./: Cargo.toml  LICENSE  Makefile  README.md  buf.gen.yaml  build.rs
.github/workflows/: release.yml
proto/helloworld/v1/: helloworld.proto
src/: client.rs  lib.rs  server.rs
